@@ -5,6 +5,7 @@ Repository head::
      Tag rename checks that it won't step on an existing name.
      "help" without topic now ermits a custom TOC with command groupings.
      Unite now produces union repositories with a valid master branch.
+     repocutter errors out if presented with unexpected extra arguments.
 
 4.24: 2021-02-13::
      Retire the read --cvsignores option; best to use an expunge instead.
